# sportsbd

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/models/: best.pt
scripts/: sportsbd_eval.py  sportsbd_infer.py  sportsbd_threshold_sweep.py
sportsbd/: __init__.py  cli.py  config.py  device.py  download.py  evaluation.py  inference.py  model.py  thresholds.py  transforms.py
tests/: test_evaluation.py  test_inference.py  test_model.py
