[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsbd"
version = "0.1.2"
description = "sportsbd: a 4-class 3D CNN-based shot boundary detection toolkit for sports videos."
readme = "README.md"
requires-python = ">=3.9"  # Python 3.11.14 recommended for PyTorch 2.9.1 compatibility
license = { text = "MIT" }
authors = [
  { name = "sportsbd contributors" }
]
dependencies = [
  "torch>=2.3.0",  # PyTorch 2.9.1 recommended for MPS Conv3D support
  "torchvision>=0.18.0",  # TorchVision 0.24.1 recommended
  "numpy==1.26.4",  # Match working environment
  "Pillow",
  "matplotlib",
  "tqdm",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Video",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/mehdih7/sportsbd"
Source = "https://github.com/mehdih7/sportsbd"
Issues = "https://github.com/mehdih7/sportsbd/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
]

[project.scripts]
sportsbd = "sportsbd.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sportsbd*"]


